[project]
name = "versioning-tool"
version = "0.1.0"
description = "Automatic versioning and changelog generation utility."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name="Tenbatsu24" }
]
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.6+",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "rich>=13.0",
    "packaging>=23.0",
    "pyyaml>=6.0"
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
version-manager = "versioning_tool.version_manager:main"
changelog-generator = "versioning_tool.changelog_generator:main"
