[project]
name = "versioning-tool"
version = "0.2.1-alpha.1"
description = "Automatic versioning and changelog generation utility."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Tenbatsu24" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "rich>=13.0",
    "packaging>=23.0",
    "pyyaml>=6.0",
    "jinja2>=3.1"
]

[flake8]
max-line-length = 100
exclude = ["venv", "build", "dist", ".git", "__pycache__"]

[tool.black]
line-length = 100

[project.scripts]
version-manager = "versioning_tool.version_manager:main"

[tool.setuptools]
packages = ["versioning_tool"]
include-package-data = true
