[metadata]
name = versioning-tool
version = 0.1.0
description = Automatic versioning and changelog generation utility.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT

[options]
packages = find:
python_requires = >=3.11
install_requires =
    rich>=13.0
    packaging>=23.0
    pyyaml>=6.0

[options.entry_points]
console_scripts =
    version-manager = versioning_tool.version_manager:main
    changelog-generator = versioning_tool.changelog_generator:main
